bugfix: More refinements to image slideshow. Refactoring a line of code, adding check for images in baskets we have permission to view, and making the image div overflow auto (for large images, it gives a scrollbar instead of overlapping or messing with the layout).

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -274,6 +274,7 @@ body.mceContentBody {
 }
 #related_items.inset #selected-image-display {
   text-align: center;
+  overflow: auto;
 }
 #related_items.inset #selected-image-display img,
 #related_items.inset #related_items_slideshow_controls img {
